@@ -730,6 +730,9 @@ Config_Control(FILE * ConfigFile)
 	  case CONTROL_WARPICONIFIED:
 	     mode.warpiconified = i2;
 	     break;
+	  case CONTROL_WARPFOCUSED:
+	     mode.warpfocused = i2;
+	     break;
 	  case DESKTOP_HIQUALITYBG:
 	     desks.hiqualitybg = i2;
 	     break;
@@ -3846,6 +3849,7 @@ SaveUserControlConfig(FILE * autosavefile)
 	fprintf(autosavefile, "667 %i\n", (int)mode.warpsticky);
 	fprintf(autosavefile, "668 %i\n", (int)mode.warpshaded);
 	fprintf(autosavefile, "669 %i\n", (int)mode.warpiconified);
+	fprintf(autosavefile, "670 %i\n", (int)mode.warpfocused);
 	fprintf(autosavefile, "1350 %i\n", (int)mode.user_bg);
 	fprintf(autosavefile, "1351 %i\n", (int)mode.pager_zoom);
 	fprintf(autosavefile, "1352 %i\n", (int)mode.pager_title);
